homework 3 with tests